--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 .navbar-nav li{padding-left: 20px; padding-right: 20px;}
-.carousel-item img{height: 90vh;}
+.carousel-item img{height: 91vh;}
 .brds15px{border-radius: 15px;}
 .course-title{font-size: 1.5rem; font-weight: 400;}
 button.owl-dot{outline: none;}
 .owl-carousel .owl-item img {display: initial!important;}
 .testimonial-name{font-size: 18px; font-weight: 600;}
 .listStyle{list-style: none!important;}
-
+.lightgrey{background-color: #d83232;}
 
 @media(max-width:991px){      
     .carousel-item img{height: auto!important;}
